# FineTunedLLM

./: .gitignore  Client.py  DEPLOYMENT.md  DocumentDataset.py  DomainDataset.py  FineTuneLLM.py  KnowledgeModel.py  KnowledgeTokenizer.py  ModelTrainer.py  README.md  TerminalClient.py  Tokenizer.py  __init__.py  azure.yaml  config.py  deploy.ps1  lora_manager.py  manifest.json  mentor_mode.py  pyproject.toml  requirements.txt
Azure/: FineTunedLLMAPI.py  WisedomAPI.py
KnowledgeModel/: AbstractiveSummarizer.py  Dataset.py  DomainAwareTrainer.py  DomainAwareTrainerBedrock.py  DomainContextManager.py  JsonlGenerator.py  KnowledgeDataset.py  KnowledgeModel.py  Model.py  README.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETED.md  Tokenizer.py  Trainer.py  __init__.py  config.py  config_template.py  example_usage.py  test_setup.py  test_structure_simple.py  verify_structure.py
LLM/: DomainDataset.py  FineTuneLLM.py  KnowledgeModel.py  KnowledgeTokenizer  ModelTrainer.py  Tokenizer.py
azure-functions/finetuning-pipeline/: function_app.py  host.json  pyproject.toml  requirements.txt
azure-functions/summarization-pipeline/: function_app.py  function_app_domain_aware.py  host.json  pyproject.toml  requirements.txt
azure_ml_lora/: README.md  __init__.py  endpoints.py  manager.py  pipeline.py  requirements.txt  run_pipeline.py  test_integration.py  trainer.py  unified_manager.py
docs/: API.md  CORE_FUNCTIONALITY.md  DEPLOYMENT.md  Implementation.md  ModelSelection.md  README.md  SETUP.md
infra/: abbreviations.json  main.bicep  main.json  main.parameters.bicepparam  (+1 more)
(+23 files in other folders)
