[project]
name = "FineTunedLLM"
version = "0.1.0"
dependencies = [
    "openai>=1.0.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "azure-openai>=1.0.0",
    "azure-identity>=1.12.0",
    "dataclasses-json>=0.5.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "azure-functions",
    "azure-storage-blob",
    "azure-keyvault-secrets",
    "anthropic>=0.23.0"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
