[project]
name = "finetuning-pipeline"
version = "0.1.0"
dependencies = [
    "azure-functions",
    "azure-storage-blob",
    "azure-identity",
    "azure-keyvault-secrets",
    "openai",
    "typing-extensions",
    "anthropic>=0.23.0"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
