[project]
name = "summarization-pipeline"
version = "0.1.0"
dependencies = [
    "azure-functions",
    "azure-storage-blob",
    "azure-identity",
    "azure-keyvault-secrets",
    "anthropic>=0.23.0",
    "typing-extensions"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
